--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,9 @@ services:
       - WELCOME_MESSAGE="Hello from second nginx"
     ports: 
       - 8888:80
+    networks: 
+      nginx-network: 
+        ipv4_address: 192.168.0.11
   #   networks: 
   #     - nginx-network
   # third-nginx: 
