test load balancing in nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,16 +4,19 @@ events {
 
 http {
     upstream backend {
-        server first-nginx weight=3;
-        server second-nginx weight=2;
-        server third-nginx weight=1;
+        # ip_hash;
+        # least_conn;
+        server first-nginx;
+        server second-nginx; 
+        server third-nginx;
     }
 
     server {
-        listen 80;
+        listen 80; 
 
         location / {
-            proxy_pass http:/backend;
+
+            proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
