--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,60 +1,56 @@
-services: 
-  first-nginx: 
-    extends: 
+services:
+  first-nginx:
+    extends:
       file: base/common-service.yaml
       service: nginx-service
     container_name: first-nginx-container
-    environment: 
-      - WELCOME_MESSAGE="Hello from first nginx"
-    ports: 
-      - 9999:80
+    # ports:
+    #   - 9999:80
+    volumes:
+      - ./nginx/html/index1.html:/usr/share/nginx/html/index.html
+    networks:
+      - nginx-network
 
-    # volumes:
-    #   - ./nginx/html/index1.html:/usr/share/nginx/html/index.html
-    networks: 
-      nginx-network: 
-        ipv4_address: 192.168.0.10
-  second-nginx: 
-    extends: 
+  second-nginx:
+    extends:
       file: base/common-service.yaml
       service: nginx-service
     container_name: second-nginx-container
-    environment: 
-      - WELCOME_MESSAGE="Hello from second nginx"
-    ports: 
-      - 8888:80
-    networks: 
-      nginx-network: 
-        ipv4_address: 192.168.0.11
-  #   networks: 
-  #     - nginx-network
-  # third-nginx: 
-  #   extends: 
-  #     file: base/common-service.yaml
-  #     service: nginx-service
-  #   container_name: third-nginx-container
-  #   # ports: 
-  #   #   - 7777:80
-  #   volumes:
-  #     - ./nginx/html/index3.html:/usr/share/nginx/html/index.html
-  #   networks: 
-  #     - nginx-network
+    # ports:
+    #   - 8888:80
+    volumes:
+      - ./nginx/html/index2.html:/usr/share/nginx/html/index.html
+    networks:
+      - nginx-network
+      
+  third-nginx:
+    extends:
+      file: base/common-service.yaml
+      service: nginx-service
+    container_name: thrid-nginx-container
+    # ports:
+    #   - 7777:80
+    volumes:
+      - ./nginx/html/index3.html:/usr/share/nginx/html/index.html
+    networks:
+      - nginx-network
 
-  # loadbalancer:
-  #   extends: 
-  #     file: base/common-service.yaml
-  #     service: nginx-service
-  #   container_name: loadbalancer-container
-  #   volumes: 
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #   ports: 
-  #     - 8888:80
-  #   networks: 
-  #     - nginx-network
-networks: 
-  nginx-network: 
-    ipam: 
-      driver: default 
+  loadbalancer:
+    extends:
+      file: base/common-service.yaml
+      service: nginx-service
+    container_name: loadbalancer-container
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:rw
+    ports:  
+      - 8888:80
+    networks:
+      - nginx-network
+
+networks:
+  nginx-network:
+    ipam:
+      driver: default
       config: 
         - subnet: 192.168.0.0/24
-          gateway: 192.168.0.1
+          gateway:  192.168.0.1
